# f1tenth-project

./: .gitignore  README.md  annotate_semmask.py  bevify.py  convert_all_f1_bags.sh  pyproject.toml  requirements.txt
bringup/: package.xml  setup.py
bringup/launch/: launch_bag_demo.py  launch_car.py
final_race/include/rrt/: rrt.h
final_race/src/: rrt.cpp
project_rrt/: CMakeLists.txt  package.xml  setup.cfg  setup.py
project_rrt/config/: rrt_params.yaml
project_rrt/launch/: rrt_node_launch.py
project_rrt/src/: rrt.cpp
segbev/: package.xml  setup.cfg  setup.py
segbev/segbev/: segbev_node.py
utils/rosbag_to_dataset/: README.md
utils/rosbag_to_dataset/config_parser/: config_parser.py
utils/rosbag_to_dataset/converter/: converter.py
utils/rosbag_to_dataset/dtypes/: ackermann_drive.py  camerainfo.py  float64.py  gridmap.py  image.py  imu.py  odometry.py  pointcloud.py  pose.py  racepak_sensors.py  twist.py
utils/rosbag_to_dataset/util/: camera_utils.py
utils/waypoint_creation/: aims7_create.sh  create_waypoints.py  simmons.sh  simmons_1.pgm_transformed.csv  simmons_1_waypoints_sus.txt  transform_waypoints.sh  transform_waypoints_to_map.py
utils/waypoint_creation/output/: annot_interp.txt  annot_raw.txt  final_waypoints.txt
